# learn_c

./: CMakeLists.txt  Makefile  README.md  check_atomics_enabled.c  producer_consumer.c
linked_list/: CMakeLists.txt  example.c  hj_list.c  hj_list.h
shared_memory/: CMakeLists.txt  README.md  pshm_buf.c  pshm_buf.h  pshm_receive.c  pshm_send.c
tests/: linked_list_test.cpp
